# JBoy

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_output.cpp  emulator_core.cpp  jni_bridge.cpp  video_renderer.cpp
app/src/main/cpp/include/: audio_output.h  emulator_core.h  video_renderer.h
app/src/main/java/com/jboy/emulator/: JBoyApplication.kt  MainActivity.kt
app/src/main/java/com/jboy/emulator/core/: AudioOutput.kt  EmulatorCore.kt  InputHandler.kt  VideoRenderer.kt
app/src/main/java/com/jboy/emulator/data/: GameDatabase.kt  RomRepository.kt  SettingsRepository.kt
app/src/main/java/com/jboy/emulator/di/: CoreModule.kt
app/src/main/java/com/jboy/emulator/input/: HardwareKeyCaptureBus.kt  InputHandler.kt
app/src/main/java/com/jboy/emulator/netplay/: NetplaySessionBus.kt
app/src/main/java/com/jboy/emulator/ui/components/: EmptyState.kt  GameCard.kt
app/src/main/res/drawable/: ic_add.xml  ic_favorite.xml  ic_favorite_border.xml  ic_folder.xml  ic_game.xml  ic_search.xml  ic_settings.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: ARCHITECTURE.md  DEVICE_QA_CHECKLIST.md
(+25 files in other folders)
